# Trace

./: .gitignore  CURSOR_BEST_PRACTICES.md  FUTURE_ROADMAP.md  README.md  cursor_prompt_trace.md  template.yaml
demo-ui/: .env.example  .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
docs/: ALLOCATION_PLAN.md  API_CONTRACT.md  ARCHITECTURE.md  BENCHMARK_EVIDENCE.md  CODEX_BEST_PRACTICES.md  COMPETITION_STRATEGY.md  COMPREHENSIVE_PLAN.md  DATA_SPEC.md  DEMO_PLAN.md  DEPLOYMENT_RUNBOOK.md  FINAL_STEPS.md  NEXT_STEPS.md  NEXT_STEPS_2026-04-18.md  OPENAI_API_KEY_SETUP.md  PERSONA.md  PITCH_VIDEO_PLAN.md  PROJECT_STATE.md  PROOF_OF_VALUE.md  RUST_CRATE_DOCS.md  S3_MIGRATION.md  UI_JUDGE_IMPROVEMENTS.md  WEB_APP_DEPLOYMENT.md  deployed-proof-runbook.md  retrieval-eval-runbook.md
lambda-engine/: Cargo.toml
lambda-engine/src/: auth.rs  config.rs  error.rs  filter.rs  http.rs  lib.rs  main.rs  search.rs
mcp-bridge/: package-lock.json  package.json  tsconfig.json
scripts/: build_proof_of_value.py  constraints.txt  deploy-frontend.ps1  deploy-full.ps1  evaluate_retrieval.py  filter_expr.py  package_benchmark_evidence.py  proof_mcp_stdio.py  prove_deployed_path.py  requirements.txt  run_deployed_benchmark.py  seed.py  trace_runtime.py  validate_eval_dataset.py
tests/: test_build_proof_of_value.py  test_deploy_full_script.py  test_evaluate_retrieval.py  test_package_benchmark_evidence.py  test_proof_mcp_stdio.py  test_prove_deployed_path.py  test_run_deployed_benchmark.py  test_seed.py  test_trace_runtime.py  (+1 more)
(+80 files in other folders)
