[package]
name = "lambda-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

aws-config = "1"
aws-sdk-s3 = "1"

# Lance 4.x: IVF-PQ ANN via Scanner::nearest + object_store (S3 / local).
lance = "4.0"
lance-linalg = "4.0"
object_store = { version = "0.12.3", features = ["aws"] }
arrow-array = "57"
arrow-schema = "57"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
base64 = "0.22"
constant_time_eq = "0.3"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
